# easyftp

./: README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ftp_client.rs  lib.rs  main.rs  sftp_client.rs  smb_client.rs  storage.rs
src/components/: BookmarkList.tsx  CompressModal.tsx  ConnectionForm.tsx  ConnectionModal.tsx  FileList.tsx  PathBar.tsx  PreviewPanel.tsx  ScaleControl.tsx  SettingsModal.tsx
src/hooks/: useScale.ts
src/types/: index.ts
