[package]
name = "ftp-client"
version = "0.1.0"
description = "FTP/SFTP/SMB Client with UI Scaling"
authors = ["you"]
edition = "2021"

[lib]
name = "ftp_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
suppaftp = { version = "6", features = ["async-native-tls"] }
ssh2 = "0.9"
urlencoding = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
base64 = "0.22"
tar = "0.4"
flate2 = "1"
bzip2 = "0.5"
zip = "2"
walkdir = "2"
